example/secondfile/objects/Rate_Component__c.object
<CustomObject>
    <fields>
        <fullName>BEID__c</fullName>
        <label>BEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Code_String__c</fullName>
        <label>Component Code String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Code__c</fullName>
        <label>Component Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Service_Type__c</fullName>
        <label>Component Service Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Value__c</fullName>
        <label>Component Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI__c</fullName>
        <label>PBI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHI__c</fullName>
        <label>PHI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rate-Component</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate-Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>